[tool.poetry]
name = "pytorch-metric-learning-blog"
version = "0.1.0"
description = "Resources needed in PML blog"
authors = ["Pento <hello@pento.ai>"]
packages = []

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.0"
black = "^22.6.0"
imageio = "^2.21.1"
torch = "^1.12.1"
tqdm = "^4.64.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.1"
pytest = "^6.2.4"
ipykernel = "^6.0.1"
ipython = "^7.25.0"
ipdb = "^0.13.9"
mypy = "^0.910"
python-dotenv = "^0.18.0"

[tool.black]
line-length = 88
target-version = ['py38']